# PDFscorer

./: .gitignore  README.md  commit.sh  pyproject.toml  test.sh  todo.md
src/: highlight_poc.py  main.py  parser.py  quiz.py  utils.py
tests/: test_highlight.py  test_parser.py  test_utils.py
