[project]
name = "MCQchecker"
version = "0.1.0"
description = "Provide an answered MCQ pdf and this program will provide the grad as will as the answers with explination for the one's that you got wrong"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.4",
    "pytest>=8.4.2",
]
